  Closes Debian #774103 (fixes for date offset calculation)
  Thanks to Peter Marschall for the patch.
* + metadata for DjVu. Closes Debian #774097 (when saving as DjVU, use MetaData)
  Thanks to Peter Marschall for the patch.
* Refactored logging of OCR dependencies.
  Closes Debian #710428
  (Add "Found ocropus" to log information on application start)


1.2.7 (23.11.2014):

* Use date from entry rather than calendar widget.
  Closes bug #183 (Date not used)
* Use icons for 'email as PDF' and the hand tool designed by Andreas E.
  Closes LP: #1197264 (wrong icons in toolbar)
* + threshold as part of OCR process
* Fix bug saving encoded characters in hOCR
* Fix bug saving defaults that are not part of a profile
* Add scrollbars to the 'Page Options' tab to make the scan button visible on
  screens that are shorter than the scan dialog.
  Closes bug #188 'Scan Document dialogue too big'
* Fix crash on start if tesseract is not installed
* Fix button display in Tools > Unsharp Mask
  Closes Debian bug #769823
  (menu entry Tools > Unsharp Mask lacks OK & Cancel buttons)
* Finnish translation (thanks to tjamob)
* Update to Czech translation (thanks to Pavel Borecki)
* Update to French translation (thanks to Christophe CHAUVET)
* Update to German translation (thanks to Tobias Bannert)
* Update to Greek translation (thanks to SiliconDreams)
* Update to Polish translation (thanks to Piotr Strębski)
* Update to Russian translation (thanks to Eugene Marshal)
* Update to Spanish translation (thanks to Max lenders)


1.2.6 (27.09.2014):

* Fix support for tesseract 3.02, broken by commit ae76b3cf.
* Changed 'save text' to extract plain text from hOCR output
* + 'save hOCR', to save hOCR output, where available.
* Fixed logic of automatic selection of blank or dark pages.
* If an error occurs whilst opening a device, remove it from the device list
  and try the next, rather than giving up straight away.
* Added text entry for date on save dialogs.