@@ -182,7 +182,9 @@ t/153_save_hocr_as_text.t
 t/154_save_hocr.t
 t/155_save_text_as_hocr.t
 t/156_save_hocr_with_encoding.t
-t/161_import_TIFF.t
+t/1611_import_TIFF.t
+t/1612_import_TIFF_with_error.t
+t/1613_import_multipage_TIFF.t
 t/162_import_ppm.t
 t/163_import_pdf.t
 t/164_import_multiple_images.t
@@ -191,7 +193,6 @@ t/166_cancel_import.t
 t/167_import_with_error.t
 t/168_import_multipage_PDF.t
 t/169_import_multipage_PDF2.t
-t/170_import_multipage_TIFF.t
 t/171_save_session.t
 t/172_open_session.t
 t/173_open_multiple_session.t
