@@ -17,6 +17,7 @@
 * Refactored logging of OCR dependencies.
   Closes Debian #710428
   (Add "Found ocropus" to log information on application start)
+* Catch filesystem errors importing TIFFs
 
 
 1.2.7 (23.11.2014):
